# ml_course

./: main.py  pyproject.toml  sample_data.csv  sklearn.ipynb
notebooks/: OOP.ipynb  data_sklearn.csv  demo.py  fast_api.py  functions_comprehensions.ipynb  numpy.ipynb  pandas_1.ipynb  project1.ipynb  pydantic_logging.ipynb  python_essentials.ipynb  serialization.ipynb  sklearn.ipynb
notebooks/saved_models/: sklearn_pipeline_model.joblib
